# dockerwiz

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
dockerwiz/: __init__.py  cli.py  config.py  docker_client.py  docker_hub.py  fallbacks.py  generator.py  models.py  services.py  stacks.py
dockerwiz/templates/go/echo/: Dockerfile.j2  Makefile.j2  docker-compose.yml.j2  go.mod.j2  nginx.conf.j2
dockerwiz/templates/go/gin/: .dockerignore.j2  Dockerfile.j2  docker-compose.override.yml.j2  docker-compose.yml.j2  go.mod.j2
dockerwiz/templates/node/express/: .env.example.j2  Dockerfile.j2  docker-compose.yml.j2  package.json.j2
dockerwiz/templates/node/nestjs/: .dockerignore.j2  Dockerfile.j2  package.json.j2
dockerwiz/templates/python/django/: .dockerignore.j2  Dockerfile.j2
dockerwiz/templates/python/fastapi/: .env.example.j2  Dockerfile.j2  Makefile.j2
dockerwiz/tui/: app.py
dockerwiz/tui/screens/: configure.py  generate.py  language.py  project.py  review.py  services.py
scope/: ARCHITECTURE.md  DESIGN.md  DEVELOPMENT.md  PRODUCT.md
tests/: test_cli.py  test_docker_client.py  test_docker_hub.py  test_generator.py  test_models.py  test_services.py  test_stacks.py
tests/snapshots/test_generator/test_render_fastapi_dev/: fastapi_dev_docker-compose.yml
tests/snapshots/test_generator/test_render_fastapi_prod_no_override/: fastapi_prod_Dockerfile
tests/snapshots/test_generator/test_render_with_postgres/: fastapi_dev_postgres_docker-compose.yml
