[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ── Project Metadata ───────────────────────────────────────────────────────────
[project]
name            = "dockerwiz"
version         = "0.1.2"
description     = "Generate production-ready Docker setups through an interactive terminal wizard."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"
authors         = [{ name = "Tauk Tauk", email = "tauktauk51833@gmail.com" }]
keywords        = ["docker", "cli", "devtools", "tui", "dockerfile", "docker-compose", "scaffold"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

# ── Runtime Dependencies ───────────────────────────────────────────────────────
dependencies = [
    "textual>=0.60.0",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

# ── CLI Entrypoint ─────────────────────────────────────────────────────────────
[project.scripts]
dockerwiz = "dockerwiz.cli:main"

# ── URLs ───────────────────────────────────────────────────────────────────────
[project.urls]
Homepage  = "https://github.com/TaukTauk/dockerwiz"
Repository = "https://github.com/TaukTauk/dockerwiz"
Issues    = "https://github.com/TaukTauk/dockerwiz/issues"
Changelog = "https://github.com/TaukTauk/dockerwiz/blob/main/CHANGELOG.md"

# ── Hatch Build ────────────────────────────────────────────────────────────────
[tool.hatchling.build.targets.wheel]
packages = ["dockerwiz"]

# ── Hatch Environments ─────────────────────────────────────────────────────────
[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-snapshot>=0.9.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-docker",
]

[tool.hatch.envs.default.scripts]
test     = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=dockerwiz --cov-report=term-missing --cov-report=xml"
lint     = "ruff check ."
lint-fix = "ruff check . --fix"
format   = "ruff format ."
types    = "mypy dockerwiz/"
check    = ["lint", "types", "test"]
run      = "python -m dockerwiz.cli"

# ── Hatch Test Environment (used by `hatch test`) ─────────────────────────────
[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest-snapshot>=0.9.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

# ── Test Matrix ────────────────────────────────────────────────────────────────
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]

# ── Pytest Configuration ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode  = "auto"
snapshot_path = "tests/snapshots"
testpaths     = ["tests"]
addopts       = "-v --tb=short"

# ── Ruff Configuration ─────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["dockerwiz", "tests"]

[tool.ruff.lint]
select = [
    "E",   "W",   "F",   "I",   "B",
    "C4",  "UP",  "N",   "ANN", "S",   "PTH",
]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.ruff.lint.isort]
known-first-party = ["dockerwiz"]

# ── Mypy Configuration ─────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = true
warn_return_any        = true
warn_unused_configs    = true
warn_unused_ignores    = true
disallow_untyped_defs  = true
ignore_missing_imports = true

# ── Coverage Configuration ─────────────────────────────────────────────────────
[tool.coverage.run]
source = ["dockerwiz"]
omit   = ["tests/*", "dockerwiz/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
